@@ -12,6 +12,7 @@ Version 0.3n
 * Fixed a bug with lactation.
 * Added scenes for bunnies:
  - Win: Get fucked by males.
+ - Win: Fuck males (dominant).
 * Added partial repeat date scenes for Miranda (mostly talk atm).
 * Naga mob (no content yet) + Naga transformative item.
 
